--- a/modules/login/index.html
+++ b/modules/login/index.html
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="login_page__control">
-                    <a href="#" class="link">Recover your account</a>
+                    <!-- <a href="#" class="link">Recover your account</a> -->
                     <button class="button button--primary">Login</button>
                 </div>
 
